# reverb-api-cli

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTEXT.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  package.json
.changeset/: README.md  list-resources-fix.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: audit.yml  ci.yml  release.yml
crates/reverb/: Cargo.toml
crates/reverb-api/: Cargo.toml
crates/reverb-api-cli/: Cargo.toml
crates/reverb-api-cli/src/: auth.rs  auth_commands.rs  error.rs  executor.rs  formatter.rs  main.rs  schema_cmd.rs
crates/reverb-api-cli/src/helpers/: listings.rs  mod.rs
crates/reverb-api/src/: client.rs  services.rs
crates/reverb-cli/: Cargo.toml
crates/reverb-cli/src/: auth.rs  auth_commands.rs  commands.rs  error.rs  executor.rs  formatter.rs  logging.rs  main.rs  schema_cmd.rs
crates/reverb-cli/src/helpers/: listings.rs  mod.rs
crates/reverb/src/: error.rs  lib.rs  schema.rs  validate.rs
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
npm/: install.js  package.json  platform.js  run.js
scripts/: coverage.sh  install-reverb-pricecheck.sh  tag-release.sh  version-sync.sh
skills/recipe-checkdeals/: SKILL.md
skills/recipe-pricecheck/: SKILL.md
skills/reverb-listings/: SKILL.md
skills/reverb-listings-draft/: SKILL.md
