[package]
name = "reverb-api-cli"
version = "0.1.0-alpha.1"
edition = "2021"
description = "Reverb CLI — command-line wrapper for the Reverb.com API"
license = "MIT"
repository = "https://github.com/reverbdotcom/cli"

[[bin]]
name = "revcli"
path = "src/main.rs"

[dependencies]
reverb-api = { version = "0.1.0-alpha.1", path = "../reverb-api" }
anyhow = "1"
clap = { version = "4", features = ["derive", "string"] }
dirs = "5"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "rustls-tls-native-roots"], default-features = false }
#serde = { version = "1", features = ["derive"] }
serde_json = "1"
#thiserror = "2"
tokio = { version = "1", features = ["full"] }
#futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
#chrono = "0.4"
percent-encoding = "2.3.2"

[dev-dependencies]
#tempfile = "3"
