[package]
name = "reverb-api"
version = "0.1.0-alpha.1"
edition = "2021"
description = "Reverb.com API client — endpoint schema types, service registry, and HTTP utilities"
license = "MIT"
repository = "https://github.com/reverbdotcom/cli"

[dependencies]
anyhow = "1"
#percent-encoding = "2.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls-native-roots"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["time", "fs"] }
tracing = "0.1"

[dev-dependencies]
#tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
